[workspace]
resolver = "2"

members = [
	"precis-core",
	"precis-profiles",
	"precis-tools",
]

[workspace.dependencies]
precis-core = { path = "precis-core" }
precis-profiles = { path = "precis-profiles" }
precis-tools = { path = "precis-tools" }
regex = "1"
reqwest = { version = "0.12.1", features = ["blocking"] }
ucd-parse = "0.1.8"
unicode-normalization = "0.1.24"
