[workspace]
resolver = "2"

members = ["precis-core", "precis-profiles", "precis-tools"]
exclude = ["precis-core/fuzz", "precis-profiles/fuzz"]

[workspace.dependencies]
precis-core = { path = "precis-core" }
precis-profiles = { path = "precis-profiles" }
precis-tools = { path = "precis-tools" }
regex = "1"
reqwest = { version = "0.13", features = ["blocking"] }
ucd-parse = "0.1"
unicode-normalization = "0.1"
