[package]
name = "precis-core"
version = "0.1.7"
authors = ["Santiago Carot-Nemesio <sancane@gmail.com>"]
description = """
PRECIS Framework: Preparation, Enforcement, and Comparison of
Internationalized Strings in Application Protocols as defined
in rfc8264
"""
documentation = "https://docs.rs/precis-core"
homepage = "https://github.com/sancane/precis"
repository = "https://github.com/sancane/precis"
readme = "README.md"
keywords = ["Preparation", "Enforcement", "Comparison", "precis", "rfc8264"]
license = "MIT/Apache-2.0"
categories = ["text-processing", "internationalization"]
edition = "2018"

[dev-dependencies]
precis-tools = { path = "../precis-tools", version = "0.1.5" }
ucd-parse = "0.1.8"

[build-dependencies]
precis-tools = { path = "../precis-tools", version = "0.1.5" }
ucd-parse = "0.1.8"

[dependencies]
unicode-normalization = "0.1.19"

[features]
networking = ["precis-tools/networking"]
