[package]
name = "precis-core"
version = "0.1.11"
authors = ["Santiago Carot-Nemesio <sancane@gmail.com>"]
description = """
PRECIS Framework: Preparation, Enforcement, and Comparison of
Internationalized Strings in Application Protocols as defined
in rfc8264
"""
documentation = "https://docs.rs/precis-core"
homepage = "https://github.com/sancane/precis"
repository = "https://github.com/sancane/precis"
readme = "README.md"
keywords = ["Preparation", "Enforcement", "Comparison", "precis", "rfc8264"]
license = "MIT/Apache-2.0"
categories = ["text-processing", "internationalization"]
edition = "2021"
rust-version = "1.80"

[features]
networking = ["precis-tools/networking"]

[dependencies]
unicode-normalization.workspace = true

[build-dependencies]
precis-tools.workspace = true
ucd-parse.workspace = true

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "*" }
precis-tools.workspace = true
proptest = "1.10"
ucd-parse.workspace = true

[[bench]]
name = "stringclass_bench"
harness = false
