[package]
name = "precis-tools"
version = "0.1.6"
authors = ["Santiago Carot-Nemesio <sancane@gmail.com>"]
description = """
Tools and parsers to generate PRECIS tables from the Unicode Character Database (UCD)
"""
documentation = "https://docs.rs/precis-tools"
homepage = "https://github.com/sancane/precis"
repository = "https://github.com/sancane/precis"
readme = "README.md"
keywords = ["Preparation", "Enforcement", "Comparison", "Internationalized", "precis"]
license = "MIT/Apache-2.0"
categories = ["text-processing", "internationalization"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
regex = "1"
reqwest = { version = "0.11.4", features = ["blocking"], optional = true }
ucd-parse = "0.1.8"

[features]
networking = ["reqwest"]
